# embedded-recruitment-task-0.0.1

./: Cargo.toml  SOLUTION.md
src/: lib.rs  main.rs  server.rs
tests/: client.rs  client_test.rs
